增加自定义文件服务

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ drf-extensions = "*"
 django-redis = "*"
 django-cors-headers = "*"
 django-ckeditor = "*"
+mutagen = "*"
+requests = "*"
 
 [requires]
 python_version = "3.6"
