--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-cors-headers = "*"
 django-ckeditor = "*"
 mutagen = "*"
 requests = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.6"
